--- a/components/goods-card/index.wxss
+++ b/components/goods-card/index.wxss
@@ -12,18 +12,18 @@
   line-height: 1;
   padding: 0;
   background: transparent;
-  width: 342rpx;
+  width: 100%;
   border-radius: 20rpx;
   align-items: center;
   justify-content: center;
-  margin-bottom: 16rpx;
+  margin-bottom: 0;
   flex-direction: column;
 }
 
 .goods-card__thumb {
   flex-shrink: 0;
   position: relative;
-  width: 340rpx;
+  width: 100%;
   height: 340rpx;
   border-radius: 20rpx 20rpx 0 0;
   overflow: hidden;
@@ -68,6 +68,7 @@
   height: 72rpx;
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 2;
+  line-clamp: 2;
   overflow: hidden;
   word-break: break-word;
   line-height: 36rpx;
@@ -119,9 +120,13 @@
   order: 3;
   margin: auto 0 0 auto;
   position: absolute;
-  bottom: 0;
-  right: 0;
-  color: var(--brand-price);
+  bottom: 12rpx;
+  right: 12rpx;
+  width: 40rpx;
+  height: 40rpx;
+  border-radius: 50%;
+  background: #fff;
+  box-shadow: 0 6rpx 16rpx rgba(0,0,0,0.15);
 }
 
 .spec-for-price {
