--- a/components/goods-list/index.wxss
+++ b/components/goods-list/index.wxss
@@ -1,7 +1,7 @@
 .goods-list-wrap {
-  display: flex;
-  flex-flow: row wrap;
-  justify-content: space-between;
-  padding: 0;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 16rpx;
+  padding: 0 16rpx 16rpx;
   background: transparent;
 }
