--- a/pages/category/components/goods-category/index.wxml
+++ b/pages/category/components/goods-category/index.wxml
@@ -1,22 +1,28 @@
 <view class="goods-category custom-class">
+  <!-- 侧边栏：展览类型 -->
   <c-sidebar custom-class="custom-sidebar" bindchange="onParentChange" activeKey="{{activeKey}}">
-    <c-sidebar-item wx:for="{{ category }}" wx:key="index" title="{{ item.name }}" disabled="{{ item.disabled }}" />
+    <c-sidebar-item wx:for="{{ category }}" wx:key="id" title="{{ item.name }}" disabled="{{ item.disabled }}" />
   </c-sidebar>
+
+  <!-- 右侧内容区 -->
   <view class="goods-category__right">
-    <c-tabbar wx:if="{{isSlotRight}}" activeKey="{{subActiveKey}}" bindchange="onChildChange" showMore>
+    <!-- 标签栏：具体展览 -->
+    <c-tabbar 
+      wx:if="{{isSlotRight}}" 
+      activeKey="{{subActiveKey}}" 
+      bindchange="onChildChange" 
+      showMore 
+      tabList="{{category.length > 0 && category[activeKey] && category[activeKey].children || []}}"
+    >
       <slot />
     </c-tabbar>
+
+    <!-- 场次列表展示区 -->
     <view wx:if="{{!isSlotRight}}" class="goods-category-normal">
-      <view
-        class="goods-category-normal-item"
-        wx:if="{{category[activeKey].children && category[activeKey].children.length > 0}}"
-      >
-        <block
-          wx:for="{{category[activeKey].children}}"
-          wx:key="index"
-          wx:if="{{level === 3 && item.children && item.children.length > 0}}"
-        >
+      <view class="goods-category-normal-item" wx:if="{{category[activeKey] && category[activeKey].children && category[activeKey].children.length}}">
+        <block wx:for="{{category[activeKey].children}}" wx:key="id">
           <view class="flex goods-category-normal-item-title"> {{item.name}} </view>
+          
           <view class="goods-category-normal-item-container">
             <view
               class="goods-category-normal-item-container-item"
@@ -27,25 +33,30 @@
               bindtap="changCategory"
               data-item="{{subItem}}"
             >
-              <t-image src="{{subItem.thumbnail}}" t-class="image" />
+              <!-- 修复图片显示 -->
+              <view class="image-container">
+                <t-image 
+                  src="{{subItem.thumbnail}}" 
+                  t-class="image" 
+                  fallback-src="https://via.placeholder.com/144x144?text=展览"
+                />
+              </view>
+              
               <view class="flex goods-category-normal-item-container-item-title"> {{subItem.name}} </view>
+              <view class="reservation-time">
+                {{subItem.date}} {{subItem.time}}
+              </view>
+              <view class="reservation-quota {{(subItem.quota - subItem.enrolled) <= 0 ? 'full' : ''}}">
+                {{(subItem.quota - subItem.enrolled) > 0 ? '剩余' + (subItem.quota - subItem.enrolled) + '位' : '已约满'}}
+              </view>
+              <view class="reservation-location">
+                {{subItem.location}}
+              </view>
             </view>
           </view>
         </block>
-        <view class="goods-category-normal-item-second-container" wx:if="{{level === 2}}">
-          <block wx:for="{{category[activeKey].children}}" wx:key="index">
-            <view
-              class="goods-category-normal-item-second-container-item"
-              wx:for-key="index"
-              bindtap="changCategory"
-              data-item="{{item}}"
-            >
-              <t-image src="{{item.thumbnail}}" t-class="image" />
-              <view class="flex goods-category-normal-item-container-item-title"> {{item.name}} </view>
-            </view>
-          </block>
-        </view>
       </view>
     </view>
   </view>
 </view>
+  
