--- a/pages/category/components/goods-category/index.wxss
+++ b/pages/category/components/goods-category/index.wxss
@@ -1,9 +1,12 @@
 .goods-category {
   display: flex;
+  height: 100%;
 }
 
 .custom-sidebar {
   height: 100%;
+  width: 180rpx;
+  background-color: #f5f5f5;
 }
 
 .goods-category__right {
@@ -14,6 +17,7 @@
   overflow: scroll;
   -webkit-overflow-scrolling: touch;
   background-color: white;
+  padding-bottom: 100rpx; /* 避免被底部导航遮挡 */
 }
 
 .flex {
@@ -25,78 +29,99 @@
 }
 
 .goods-category-normal-item-title {
-  font-size: 28rpx;
+  font-size: 30rpx;
   font-weight: 500;
+  padding: 10rpx 0;
+  border-bottom: 1px solid #f0f0f0;
+  margin-bottom: 15rpx;
 }
 
 .goods-category-normal-item-container {
   background-color: #fff;
-  border-radius: 8rpx;
-  padding-top: 28rpx;
-  margin-top: -24rpx;
+  border-radius: 12rpx;
+  padding: 28rpx 10rpx;
   margin-bottom: 30rpx;
   display: flex;
   flex-wrap: wrap;
+  box-shadow: 0 2rpx 10rpx rgba(0,0,0,0.05); /* 增加轻微阴影 */
 }
 
+/* 修复卡片样式 */
 .goods-category-normal-item-container-item {
-  height: 196rpx;
+  min-height: 260rpx;
+  height: auto;
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 24rpx;
+  margin-top: 10rpx;
   width: 33.3%;
+  padding: 15rpx;
+  box-sizing: border-box;
+}
+
+.image-container {
+  width: 144rpx;
+  height: 144rpx;
+  border-radius: 8rpx;
+  overflow: hidden;
+  background-color: #f5f5f5; /* 图片加载前的背景色 */
 }
 
 .goods-category-normal-item-container-item .image {
-  width: 144rpx;
-  height: 144rpx;
+  width: 100%;
+  height: 100%;
+  object-fit: cover; /* 图片自适应裁剪 */
 }
 
 .goods-category-normal-item-container-item-title {
   justify-content: center;
-  font-size: 24rpx;
-  color: #666666;
-  margin-top: 20rpx;
-}
-
-.goods-category .custom-sidebar {
-  background-color: #f5f5f5;
-}
-
-.custom-sidebar {
-  width: 180rpx;
-  height: 100vh;
-}
-
-.custom-sidebar::-webkit-scrollbar {
-  width: 0;
-  height: 0;
-  color: transparent;
-}
-
-.goods-category-normal-item-second-container {
-  background-color: #fff;
-  border-radius: 8rpx;
-  margin-top: 8rpx;
-  margin-bottom: 30rpx;
-  display: grid;
-  grid-template-columns: 33.33% 33.33% 33.33%;
-}
-
-.goods-category-normal-item-second-container-item {
-  height: 200rpx;
+  font-size: 26rpx;
+  color: #222;
+  margin-top: 15rpx;
+  height: auto;
+  line-height: 1.3;
   text-align: center;
-  margin-top: 20rpx;
+  padding: 0 5rpx;
 }
 
-.goods-category-normal-item-second-container-item .image {
-  width: 144rpx;
-  height: 144rpx;
+/* 修复文字排版 */
+.reservation-time {
+  font-size: 22rpx;
+  color: #666;
+  margin-top: 10rpx;
+  height: auto;
+  line-height: 1.3;
+  text-align: center;
+  width: 100%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
-.goods-category-normal-item-second-container-item-title {
-  justify-content: center;
-  font-size: 24rpx;
-  color: #222427;
+.reservation-quota {
+  font-size: 22rpx;
+  margin-top: 10rpx;
+  height: auto;
+  line-height: 1.3;
+  text-align: center;
+  width: 100%;
 }
+
+.reservation-quota:not(.full) {
+  color: #0071ce;
+}
+
+.reservation-quota.full {
+  color: #999;
+}
+
+.reservation-location {
+  font-size: 20rpx;
+  color: #666;
+  background: #f5f5f5;
+  padding: 3rpx 12rpx;
+  border-radius: 6rpx;
+  margin-top: 10rpx;
+  text-align: center;
+}
+  
