--- a/pages/category/index.wxss
+++ b/pages/category/index.wxss
@@ -8,16 +8,14 @@
 .wrap {
   height: 100vh;
   overflow: hidden;
+  background-color: #f6f6f6;
 }
+
 .goods-category-class {
-  background-color: #f6f6f6 !important;
   height: 100%;
-}
-.goods-category-class .goods-category-normal-item-container-item {
-  margin-top: 20rpx;
 }
 
 page {
-  min-height: none;
-  padding-bottom: 0;
+  min-height: 100%;
+  background-color: #f6f6f6;
 }
