--- a/pages/category/components/goods-category/index.wxss
+++ b/pages/category/components/goods-category/index.wxss
@@ -1,18 +1,12 @@
 .goods-category {
   display: flex;
-<<<<<<< HEAD
   height: 100%;
-=======
->>>>>>> 8a4f608c58ff387d6453daf1e3f9e1e5f76f2f7f
 }
 
 .custom-sidebar {
   height: 100%;
-<<<<<<< HEAD
   width: 180rpx;
   background-color: #f5f5f5;
-=======
->>>>>>> 8a4f608c58ff387d6453daf1e3f9e1e5f76f2f7f
 }
 
 .goods-category__right {
@@ -23,10 +17,7 @@
   overflow: scroll;
   -webkit-overflow-scrolling: touch;
   background-color: white;
-<<<<<<< HEAD
   padding-bottom: 100rpx; /* 避免被底部导航遮挡 */
-=======
->>>>>>> 8a4f608c58ff387d6453daf1e3f9e1e5f76f2f7f
 }
 
 .flex {
@@ -38,21 +29,15 @@
 }
 
 .goods-category-normal-item-title {
-<<<<<<< HEAD
   font-size: 30rpx;
   font-weight: 500;
   padding: 10rpx 0;
   border-bottom: 1px solid #f0f0f0;
   margin-bottom: 15rpx;
-=======
-  font-size: 28rpx;
-  font-weight: 500;
->>>>>>> 8a4f608c58ff387d6453daf1e3f9e1e5f76f2f7f
 }
 
 .goods-category-normal-item-container {
   background-color: #fff;
-<<<<<<< HEAD
   border-radius: 12rpx;
   padding: 28rpx 10rpx;
   margin-bottom: 30rpx;
@@ -86,33 +71,10 @@
   width: 100%;
   height: 100%;
   object-fit: cover; /* 图片自适应裁剪 */
-=======
-  border-radius: 8rpx;
-  padding-top: 28rpx;
-  margin-top: -24rpx;
-  margin-bottom: 30rpx;
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.goods-category-normal-item-container-item {
-  height: 196rpx;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin-top: 24rpx;
-  width: 33.3%;
-}
-
-.goods-category-normal-item-container-item .image {
-  width: 144rpx;
-  height: 144rpx;
->>>>>>> 8a4f608c58ff387d6453daf1e3f9e1e5f76f2f7f
 }
 
 .goods-category-normal-item-container-item-title {
   justify-content: center;
-<<<<<<< HEAD
   font-size: 26rpx;
   color: #222;
   margin-top: 15rpx;
@@ -162,13 +124,8 @@
   margin-top: 10rpx;
   text-align: center;
 }
-  
-=======
-  font-size: 24rpx;
-  color: #666666;
-  margin-top: 20rpx;
-}
 
+/* 侧栏样式补充 */
 .goods-category .custom-sidebar {
   background-color: #f5f5f5;
 }
@@ -184,6 +141,7 @@
   color: transparent;
 }
 
+/* 二级容器（level === 2）兼容样式 */
 .goods-category-normal-item-second-container {
   background-color: #fff;
   border-radius: 8rpx;
@@ -209,4 +167,3 @@
   font-size: 24rpx;
   color: #222427;
 }
->>>>>>> 8a4f608c58ff387d6453daf1e3f9e1e5f76f2f7f
