--- a/components/goods-card/index.wxss
+++ b/components/goods-card/index.wxss
@@ -127,6 +127,9 @@
   border-radius: 50%;
   background: #fff;
   box-shadow: 0 6rpx 16rpx rgba(0,0,0,0.15);
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .spec-for-price {
