--- a/pages/usercenter/components/order-group/index.wxml
+++ b/pages/usercenter/components/order-group/index.wxml
@@ -24,10 +24,9 @@
       <view class="order-group__item__icon icon-class">
         <t-badge count="{{item.orderNum}}" max-count="{{99}}" color="#FF4646">
           <t-icon
-            prefix="{{classPrefix}}"
             name="{{item.iconName}}"
             size="56rpx"
-            customStyle="background-image: -webkit-linear-gradient(90deg, #6a6a6a 0%,#929292 100%);-webkit-background-clip: text;-webkit-text-fill-color: transparent;"
+            color="#000"
           />
         </t-badge>
       </view>
