商品界面更新

--- a/components/goods-card/index.wxml
+++ b/components/goods-card/index.wxml
@@ -7,11 +7,11 @@
   <view class="goods-card__main">
     <view class="goods-card__thumb" bind:tap="clickThumbHandle">
       <t-image
-        wx:if="{{ !!goods.thumb }}"
         t-class="goods-card__img"
-        src="{{ goods.thumb }}"
+        src="{{ thumbSrc }}"
         mode="aspectFill"
         lazy-load
+        bind:error="onThumbError"
       />
       <view wx:if="{{goods.ruralSupport}}" class="rural-support-badge">助农</view>
     </view>
