--- a/pages/home/home.wxml
+++ b/pages/home/home.wxml
@@ -1,18 +1,9 @@
 <!-- 顶部：视频播放区块 -->
 <view class="home-video-wrap">
-  <video
-    id="home-top-video"
-    class="home-video"
-    src="https://shoes-1379330878.cos.ap-beijing.myqcloud.com/9%E6%9C%8820%E6%97%A5.mp4"
-    object-fit="cover"
-    controls
-    show-center-play-btn
-    enable-progress-gesture
-    autoplay="{{videoAutoplay}}"
-    muted="{{videoMuted}}"
-    loop="{{videoLoop}}"
-    binderror="onVideoError"
-  ></video>
+  <video id="home-top-video" class="home-video"
+    src="https://shoes-1379330878.cos.ap-beijing.myqcloud.com/9%E6%9C%8820%E6%97%A5.mp4" object-fit="cover" controls
+    show-center-play-btn enable-progress-gesture autoplay="{{videoAutoplay}}" muted="{{videoMuted}}"
+    loop="{{videoLoop}}" binderror="onVideoError"></video>
 </view>
 
 <!-- 英雄大图 -->
@@ -24,20 +15,14 @@
 
 <!-- 白底圆角功能宫格（2x4） -->
 <view class="func-card">
-  <view class="func-grid">
+  <view class="func-grid func-grid--balance">
     <view class="func-item" wx:for="{{funcList}}" wx:key="index" data-index="{{index}}" bindtap="onFuncTap">
-      <view class="func-icon">
-        <!-- 功能图标：使用CDN图片 -->
-        <image 
-          src="{{item.iconUrl}}" 
-          class="func-icon-img"
-          mode="contain"
-        />
+        <view class="func-icon func-icon--lg">
+          <image src="{{item.iconUrl}}" class="func-icon-img" mode="aspectFill" />
+        </view>
+        <view class="func-chip">{{item.text}}</view>
       </view>
-      <view class="func-text">{{item.text}}</view>
     </view>
   </view>
-</view>
 
 <t-toast id="t-toast" />
-    
